--- a/tests/Makefile
+++ b/tests/Makefile
@@ -9,54 +9,104 @@ HDRS = blas_reference.h wilson_dslash_reference.h staggered_dslash_reference.h  
 
 LDFLAGS += -L/users/kallidoc/install/lib -larpack -lparpack
 
-#TESTS = invert_test
-#	deflation_test						\
+ifeq ($(strip $(BUILD_WILSON_DIRAC)), yes)
+  DIRAC_TEST = dslash_test invert_test
+endif
+
+ifeq ($(strip $(BUILD_DOMAIN_WALL_DIRAC)), yes)
+  DIRAC_TEST = dslash_test invert_test
+endif
+
+ifeq ($(strip $(BUILD_STAGGERED_DIRAC)), yes)
+  STAGGERED_DIRAC_TEST=staggered_dslash_test staggered_invert_test
+endif
+
+ifeq ($(strip $(BUILD_FATLINK)), yes)
+  FATLINK_TEST=llfat_test
+endif
+
+ifeq ($(strip $(BUILD_HISQLINK)), yes)
+  ifneq ($(strip $(BUILD_FATLINK)), yes) 
+    FATLINK_TEST=llfat_test
+  endif
+  UNITARIZE_LINK_TEST=unitarize_link_test
+endif
+
+ifeq ($(strip $(BUILD_GAUGE_FORCE)), yes)
+  GAUGE_FORCE_TEST=gauge_force_test
+endif
+
+ifeq ($(strip $(BUILD_FERMION_FORCE)), yes)
+  FERMION_FORCE_TEST=fermion_force_test
+endif
+
+ifeq ($(strip $(BUILD_HISQ_FORCE)), yes)
+  HISQ_PATHS_FORCE_TEST=hisq_paths_force_test
+  HISQ_UNITARIZE_FORCE_TEST=hisq_unitarize_force_test
+endif
+
+ifeq ($(strip $(BUILD_GAUGE_ALG)), yes)
+  GAUGE_ALG_TEST= gauge_alg_test
+endif
+
+#TESTS = su3_test pack_test blas_test dslash_test invert_test	\
+	deflation_test						\
 	$(DIRAC_TEST) $(STAGGERED_DIRAC_TEST) $(FATLINK_TEST)	\
 	$(GAUGE_FORCE_TEST) $(FERMION_FORCE_TEST)		\
 	$(UNITARIZE_LINK_TEST) $(HISQ_PATHS_FORCE_TEST)		\
-	$(HISQ_UNITARIZE_FORCE_TEST)
+	$(HISQ_UNITARIZE_FORCE_TEST) $(GAUGE_ALG_TEST)
 
-#TESTS = deflationLoops_w_oneD deflationLoops_w_oneD_volumeSource deflationTwopThreep
-TESTS = CalcEigenVecs_Loops_w_oneD CalcEigenVecs_Loops_w_oneD_2pt3pt CalcEigenVecs CalcEigenVecs_2pt3pt deflationTwopThreep deflationInverter deflationLoops deflationLoops_w_oneD deflationLoops_w_oneD_volumeSource createWritePropsSLReadApeGauge test_plaquette
+
+TESTS = CalcEigenVecs_Loops_w_oneD \
+	CalcEigenVecs_Loops_w_oneD_2pt3pt \
+	CalcEigenVecs \
+	CalcEigenVecs_2pt3pt \
+	deflationTwopThreep \
+	deflationInverter \
+	deflationLoops \
+	deflationLoops_w_oneD \
+	deflationLoops_w_oneD_volumeSource \
+	createWritePropsSLReadApeGauge \
+	test_plaquette
+
 
 all: $(TESTS)
 
-
-#EigenSolver: EigenSolver.o test_util.o wilson_dslash_reference.o domain_wall_dslash_reference.o misc.o blas_reference.o $(QIO_UTIL) $(QUDA)
-#	$(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
+#-----------------------------------------------
+CalcEigenVecs_Loops_w_oneD: CalcEigenVecs_Loops_w_oneD.o test_util.o wilson_dslash_reference.o domain_wall_dslash_reference.o misc.o blas_reference.o $(QIO_UTIL) $(QUDA)
+      $(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
 
 CalcEigenVecs_Loops_w_oneD_2pt3pt: CalcEigenVecs_Loops_w_oneD_2pt3pt.o test_util.o wilson_dslash_reference.o domain_wall_dslash_reference.o misc.o blas_reference.o $(QIO_UTIL) $(QUDA)
-	$(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
-
-CalcEigenVecs_Loops_w_oneD: CalcEigenVecs_Loops_w_oneD.o test_util.o wilson_dslash_reference.o domain_wall_dslash_reference.o misc.o blas_reference.o $(QIO_UTIL) $(QUDA)
-	$(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
-
-CalcEigenVecs_2pt3pt: CalcEigenVecs_2pt3pt.o test_util.o wilson_dslash_reference.o domain_wall_dslash_reference.o misc.o blas_reference.o $(QIO_UTIL) $(QUDA)
-	$(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
+      $(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
 
 CalcEigenVecs: CalcEigenVecs.o test_util.o wilson_dslash_reference.o domain_wall_dslash_reference.o misc.o blas_reference.o $(QIO_UTIL) $(QUDA)
-	$(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
+      $(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
 
-deflationInverter: deflationInverter.o test_util.o wilson_dslash_reference.o domain_wall_dslash_reference.o misc.o blas_reference.o $(QIO_UTIL) $(QUDA)
-	$(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
+CalcEigenVecs_2pt3pt: CalcEigenVecs_2pt3pt.o test_util.o wilson_dslash_reference.o domain_wall_dslash_reference.o misc.o blas_reference.o $(QIO_UTIL) $(QUDA)
+      $(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
 
 deflationTwopThreep: deflationTwopThreep.o test_util.o wilson_dslash_reference.o domain_wall_dslash_reference.o misc.o blas_reference.o $(QIO_UTIL) $(QUDA)
-	$(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
+      $(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
+
+deflationInverter: deflationInverter.o test_util.o wilson_dslash_reference.o domain_wall_dslash_reference.o misc.o blas_reference.o $(QIO_UTIL) $(QUDA)
+      $(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
 
 deflationLoops: deflationLoops.o test_util.o wilson_dslash_reference.o domain_wall_dslash_reference.o misc.o blas_reference.o $(QIO_UTIL) $(QUDA)
-	$(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
+      $(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
 
 deflationLoops_w_oneD: deflationLoops_w_oneD.o test_util.o wilson_dslash_reference.o domain_wall_dslash_reference.o misc.o blas_reference.o $(QIO_UTIL) $(QUDA)
-	$(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
+      $(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
 
 deflationLoops_w_oneD_volumeSource: deflationLoops_w_oneD_volumeSource.o test_util.o wilson_dslash_reference.o domain_wall_dslash_reference.o misc.o blas_reference.o $(QIO_UTIL) $(QUDA)
-	$(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
+      $(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
 
 createWritePropsSLReadApeGauge: createWritePropsSLReadApeGauge.o test_util.o wilson_dslash_reference.o domain_wall_dslash_reference.o misc.o blas_reference.o $(QIO_UTIL) $(QUDA)
-	$(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
+      $(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
 
 test_plaquette: test_plaquette.o test_util.o wilson_dslash_reference.o domain_wall_dslash_reference.o misc.o blas_reference.o $(QIO_UTIL) $(QUDA)
-	$(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
+      $(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
+#-----------------------------------------------
+
 
 dslash_test: dslash_test.o test_util.o gtest-all.o wilson_dslash_reference.o domain_wall_dslash_reference.o misc.o $(QIO_UTIL) $(QUDA)
 	$(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
@@ -74,6 +124,9 @@ staggered_invert_test: staggered_invert_test.o test_util.o staggered_dslash_refe
 	$(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
 
 su3_test: su3_test.o test_util.o misc.o $(QIO_UTIL) $(QUDA)
+	$(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
+
+gauge_alg_test: gauge_alg_test.o test_util.o misc.o gtest-all.o $(QIO_UTIL)  $(QUDA)
 	$(CXX) $(LDFLAGS) $^ -o $@ $(LDFLAGS)
 
 pack_test: pack_test.o test_util.o misc.o $(QUDA)
@@ -107,6 +160,7 @@ clean:
 	hisq_unitarize_force_test unitarize_link_test \
 	deflationTwopThreep deflationInverter deflationLoops deflationLoops_w_oneD deflationLoops_w_oneD_volumeSource CalcEigenVecs \
 	createWritePropsSLReadApeGauge test_plaquette CalcEigenVecs_2pt3pt CalcEigenVecs_Loops_w_oneD CalcEigenVecs_Loops_w_oneD_2pt3pt
+
 
 %.o: %.c $(HDRS)
 	$(CC) $(CFLAGS) $< -c -o $@
